inizio barra parametri

--- a/pagina3.html
+++ b/pagina3.html
@@ -24,11 +24,49 @@
             <div class="word active">Accident</div>
         </div>
     </div>
-    <div class="parameters">
+    <div class="consequences">
+        <!-- Sezione Reactions -->
         <div class="reactions">
-
+            <h2>REACTIONS</h2>
+            <div id="data">
+            <div class="reaction-item">
+                <span>Media Impact</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 66%;"></div>
+                </div>
+                <span>66%</span>
+            </div>
+            <div class="reaction-item">
+                <span>Shock</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 61%;"></div>
+                </div>
+                <span>61%</span>
+            </div>
+        </div>
+        </div>
+    
+        <!-- Sezione Price -->
+        <div class="price">
+            <h2>Price</h2>
+            <div class="price-detail">
+                <span>Place</span>
+                <span>Private</span>
+            </div>
+            <div class="price-detail">
+                <span>Mode</span>
+                <span>Overdose</span>
+            </div>
+            <div class="price-detail">
+                <span>Main reaction</span>
+                <span>Pain</span>
+            </div>
+            <div class="price-total">
+                <span>TOT</span>
+                <span>1.500.000 $</span>
+            </div>
         </div>
     </div>
+    
 </body>
 </html>
-fsasa
