--- a/pagina3.html
+++ b/pagina3.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://use.typekit.net/qbb0zyi.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="script.js" defer></script>
+    <script src="arduino.js" defer></script>
+    
 </head>
+
 <body class="page3">
     <div class="choice">
         <!-- Cerchio -->
@@ -44,7 +47,12 @@
                 <span>61%</span>
             </div>
         </div>
-        </div>
+    </div>
+
+    <div class="generation">
+        <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </h4>
+
+    </div>
     
         <!-- Sezione Price -->
         <div class="price">
