--- a/pagina2.html
+++ b/pagina2.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="style.css"> <!-- Collega il file CSS -->
     <link rel="stylesheet" href="https://use.typekit.net/qbb0zyi.css">
     <script src="script.js"></script>
+    <script src="arduino.js" defer></script>
 </head>
 <body>
   <video class="video" autoplay muted>
     <source src="asset/polimi.mp4" type="video/mp4">
     Il tuo browser non supporta il tag video.
+
+
 </video>
     
     </div>
