potenziometro gira parole

--- a/pagina3.html
+++ b/pagina3.html
@@ -10,9 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
-    
 </head>
-
 <body class="page3">
     <div class="choice">
         <!-- Cerchio -->
@@ -30,7 +28,7 @@
     <div class="consequences">
         <!-- Sezione Reactions -->
         <div class="reactions">
-            <h2>REACTIONS</h2>
+            <h2 id="connectButton">REACTIONS</h2>
             <div id="data">
             <div class="reaction-item">
                 <span>Media Impact</span>
@@ -75,6 +73,5 @@
             </div>
         </div>
     </div>
-    
 </body>
 </html>
