font sistemati in teoria

--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -32,7 +32,6 @@
     </script>
 </head>
 <body class="page3">
-    <div id="tipoMorte">Tipo di morte: </div>
     <div class="choice">
         <!-- Cerchio -->
         <div class="circle"></div>
@@ -49,7 +48,7 @@
     <div class="consequences">
         <!-- Sezione Reactions -->
         <div class="reactions">
-            <h2 id="connectButton">ESTIMATED REACTIONS</h2>
+            <h2 class="title" id="connectButton">ESTIMATED REACTIONS</h2>
             <div class="generation">
                 <h4>Your overdose will be seen as a fitting conclusion to a life of indulgence and rebellion. Fans will honor you with artistic tributes, films, music, and art celebrating the beauty and chaos of your existence.</h4>
         
@@ -90,10 +89,9 @@
     
         <!-- Sezione Price -->
         <div class="price">
-            <h2>Price</h2>
-            <div class="price-total">
-                <span>TOT</span>
-                <span>1.500.000 $</span>
+            <h2 class="price-title">PRICE</h2>
+            <div>
+                <span class="price-dollar">1.500.000 $</span>
             </div>
         </div>
     </div>
