San Pietro Forino

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <script src="arduino.js" defer></script>
 </head>
 <body>
-    <img class="background" src="asset/Marchio.svg" alt="Marchio" id="connectButton">
+    <img class="background" src="asset/Marchio.svg" alt="Marchio">
 </body>
 </html>
