--- a/public/pagina2.html
+++ b/public/pagina2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 2</title>
     <link rel="stylesheet" href="style.css">
+    <script src="arduino.js" defer></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const video = document.getElementById('myVideo');
