--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Intro</title>
     <link rel="stylesheet" href="style.css">
     <script src="arduino.js" defer></script>
+    <script src="start.js" defer></script>
 </head>
 <body>
     <img class="background" src="asset/Marchio.svg" alt="Marchio">
