--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -14,6 +14,7 @@
 
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
+    <script src="choice.js" defer></script>
     
 </head>
 <body class="page3">
