--- a/public/pagina2.html
+++ b/public/pagina2.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <video id="myVideo" autoplay muted>
-        <source src="../public/asset/polimi.mp4" type="video/mp4">
+        <source src="../public/asset/videos/onboard.mp4" type="video/mp4">
         Il tuo browser non supporta il tag video.
     </video>
 </body>
