--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -15,8 +15,17 @@
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
     <script src="choice.js" defer></script>
+    <script src="simulate.js" defer></script>
     
 </head>
+
+<div id="videoContainer" style="display: none;">
+    <video id="videoPopup" width="600" controls>
+        <source src="your-video-file.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div> <!-- Contenitore per il video -->
+
 
 <body class="page3">
     <div class="choice">
@@ -32,6 +41,7 @@
             <div class="word active">ACCIDENT</div>
         </div>
     </div>
+    
     <div class="consequences">
         <!-- Sezione Reactions -->
         <div class="reactions">
@@ -71,5 +81,24 @@
             </div>
         </div>
     </div>
+</div>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var videoContainer = document.getElementById('videoContainer');
+        var videoPopup = document.getElementById('videoPopup');
+
+        videoPopup.addEventListener('ended', function() {
+            videoContainer.style.display = 'none';
+        });
+
+        // Funzione per mostrare il video
+        function showVideo() {
+            videoContainer.style.display = 'block';
+            videoPopup.play();
+        }
+
+        // Aggiungi qui il codice per chiamare showVideo() quando necessario
+    });
+</script>
 </body>
 </html>
