--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -43,26 +43,26 @@
     <div class="consequences">
         <div class="first">
             <div class="consequence">
-                <h2></h2>
+                <h1></h1>
             </div>
             <div class="just-like">
-                <h4>Just like John Lennon</h4>
+                <h4></h4>
             </div>
         </div>
             
         <div class="second">
             <div class="reaction">
-                You’ll set of a reaction:
+                <p>You’ll set of a reaction:</p>
                 <h4>ANGER</h4>
                 <h4>CURIOSITY</h4>
             </div>
             <div class="symbol">
-                You’ll be symbol of:
+                <p>You’ll be symbol of:</p>
                 <h4>JUSTICE</h4>
                 <h4>REVOLUTION</h4>
             </div>
             <div class="tributes">
-                There’ll be tributes:
+                <p>There’ll be tributes:</p>
                 <h4>VIGILS</h4>
                 <h4>COMMEMORATIONS</h4>
             </div>
