short press e double press messi, mi manca il fargli fare le cose

--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -11,6 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
 
 
+    
+
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
     <script src="choice.js" defer></script>
@@ -52,7 +54,7 @@
             </div>
         </div>
             
-        <div class="second">
+        <!-- <div class="second">
             <div class="reaction">
                 <p>You’ll set of a reaction:</p>
                 <h4>ANGER</h4>
@@ -67,7 +69,7 @@
                 <p>There’ll be tributes:</p>
                 <h4>VIGILS</h4>
                 <h4>COMMEMORATIONS</h4>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
