devo sistemare piu precisamente long e short press

--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -10,6 +10,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.serialport/1.0.0/p5.serialport.js"></script>
 
     
 
@@ -18,6 +21,7 @@
     <script src="choice.js" defer></script>
     <script src="simulate.js" defer></script>
     <script src="generation.js" defer></script>
+    <script src="date.js" defer></script>
     
 
 
