--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -33,6 +33,7 @@
 
 
 <body class="page3">
+    <div class="vertical-guide"></div>
     <div class="choice">
         <!-- Cerchio -->
         <div class="circle"></div>
@@ -73,13 +74,13 @@
             </div>
         </div>
 
-        <div id="videoContainer" style="cursor: pointer;">
+        <!-- <div id="videoContainer" style="cursor: pointer;">
             <img id="videoThumbnail" src="asset/stopvideo.png" alt="Video Thumbnail">
             <video id="accidentVideo" style="display: none;">
                 <source src="asset/videos/accident.mp4" type="video/mp4">
                 Il tuo browser non supporta il tag video.
             </video>
-        </div>
+        </div> -->
             
         <!-- <div class="second">
             <div class="reaction">
