ho creato pagina4, work in progress

--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -18,7 +18,7 @@
 
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
-    <script src="choice.js" defer></script>
+    <script src="choice/death-choice.js" defer></script>
     <script src="simulate.js" defer></script>
     <script src="generation.js" defer></script>
     <script src="date.js" defer></script>
