--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
     <script src="arduino.js" defer></script>
     <script src="start.js" defer></script>
 </head>
-<body>
-    <img class="background" src="asset/Marchio.svg" alt="Marchio">
+<body class="page1">
+    <div class="begin-instructions">
+                <h4 class="font-regular">
+                    OPEN THE TIME CAPSULE <br>
+                    TO START THE EXPERIENCE
+                </h4>
+        </h1>
+    </div>
+    <img class="logo" src="asset/Marchio.svg" alt="Marchio">
 </body>
 </html>
