--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -69,9 +69,9 @@
             <div class="consequence">
                 <h1></h1>
             </div>
-            <div class="just-like">
+            <!-- <div class="just-like">
                 <h4></h4>
-            </div>
+            </div> -->
         </div>
 
         <div class="video">
