mi manca inserire il day tra il mese e l'anno

--- a/public/pagina3.html
+++ b/public/pagina3.html
@@ -31,7 +31,6 @@
     
 </div> Contenitore per il video -->
 
-
 <body class="page3">
     <div class="vertical-guide"></div>
     <div class="choice">
@@ -75,7 +74,7 @@
         </div>
 
         <div class="video">
-            <div id="videoContainer" style="cursor: pointer;">
+            <div id="videoContainer">
                 <img id="videoThumbnail" src="asset/stopvideo/accident.png" alt="Video Thumbnail">
                 <video id="accidentVideo" style="display: none;">
                     <source src="asset/videos/accident.mp4" type="video/mp4">
