mi manca lo scontrino finale, sistemare distanze e alzare rotelle

--- a/public/2-onboarding.html
+++ b/public/2-onboarding.html
@@ -1,3 +1,4 @@
+<!-- Start of Selection -->
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -11,7 +12,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             const video = document.getElementById('myVideo');
             video.addEventListener('ended', () => {
-                window.location.href = 'pagina3.html';
+                window.location.href = '3-death.html';
             });
         });
     </script>
@@ -23,3 +24,4 @@
     </video>
 </body>
 </html>
+<!-- End of Selection -->
