--- a/public/3-death.html
+++ b/public/3-death.html
@@ -39,26 +39,26 @@
         
         <!-- Tipi di morte -->
         <div class="word-container">
-            <div class="word" id="word1">MURDER</div>
-            <div class="word" id="word2">ILLNESS</div>
-            <div class="word" id="word3" >OVERDOSE</div>
-            <div class="word active" id="word4" data-active="true">SUICIDE</div>
-            <div class="word" id="word5">ACCIDENT</div>
-            <div class="word" id="word6">MURDER</div>
-            <div class="word" id="word7">ILLNESS</div>
-            <div class="word" id="word8">OVERDOSE</div>
-            <div class="word" id="word9">SUICIDE</div>
-            <div class="word" id="word10">ACCIDENT</div>
-            <div class="word" id="word11">MURDER</div>
-            <div class="word" id="word12">ILLNESS</div>
-            <div class="word" id="word13">OVERDOSE</div>
-            <div class="word" id="word14">SUICIDE</div>
-            <div class="word" id="word15">ACCIDENT</div>
-            <div class="word" id="word16">MURDER</div>
-            <div class="word" id="word17">ILLNESS</div>
-            <div class="word" id="word18">OVERDOSE</div>
-            <div class="word" id="word19">SUICIDE</div>
-            <div class="word" id="word20">ACCIDENT</div>
+            <div class="word font-regular" id="word1">MURDER</div>
+            <div class="word font-regular" id="word2">ILLNESS</div>
+            <div class="word font-regular" id="word3">OVERDOSE</div>
+            <div class="word active font-DemiBold" id="word4" data-active="true">SUICIDE</div>
+            <div class="word font-regular" id="word5">ACCIDENT</div>
+            <div class="word font-regular" id="word6">MURDER</div>
+            <div class="word font-regular" id="word7">ILLNESS</div>
+            <div class="word font-regular" id="word8">OVERDOSE</div>
+            <div class="word font-regular" id="word9">SUICIDE</div>
+            <div class="word font-regular" id="word10">ACCIDENT</div>
+            <div class="word font-regular" id="word11">MURDER</div>
+            <div class="word font-regular" id="word12">ILLNESS</div>
+            <div class="word font-regular" id="word13">OVERDOSE</div>
+            <div class="word font-regular" id="word14">SUICIDE</div>
+            <div class="word font-regular" id="word15">ACCIDENT</div>
+            <div class="word font-regular" id="word16">MURDER</div>
+            <div class="word font-regular" id="word17">ILLNESS</div>
+            <div class="word font-regular" id="word18">OVERDOSE</div>
+            <div class="word font-regular" id="word19">SUICIDE</div>
+            <div class="word font-regular" id="word20">ACCIDENT</div>
         </div>
         
     </div>
