--- a/public/6-year.html
+++ b/public/6-year.html
@@ -12,9 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.serialport/1.0.0/p5.serialport.js"></script>
 
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
     <script src="arduino.js" defer></script>
-    <script src="choice/month-choice.js" defer></script>
     <script src="choice/year-choice.js" defer></script>
     <script src="generation.js" defer></script>
 </head>
