working on, prova scontrino

--- a/public/3-death.html
+++ b/public/3-death.html
@@ -29,7 +29,7 @@
 </div> Contenitore per il video -->
 
 <body class="page3">
-    <div class="vertical-guide"></div>
+    <!-- <div class="vertical-guide"></div> -->
     <div class="choice">
         <!-- Cerchio -->
         <div class="circle"></div>
