--- a/public/4-month.html
+++ b/public/4-month.html
@@ -17,10 +17,11 @@
 
     <script src="arduino.js" defer></script>
     <script src="choice/month-choice.js" defer></script>
+    <script src="choice/death-choice.js" defer></script>
     <script src="generation.js" defer></script>
 </head>
 <body class="page4">
-    <div class="vertical-guide"></div>
+    <!-- <div class="vertical-guide"></div> -->
 
     <div class="date-name">
         <div class="section-title">MONTH</div>
