--- a/public/5-day-28.html
+++ b/public/5-day-28.html
@@ -14,11 +14,12 @@
 
     <script src="arduino.js" defer></script>
     <script src="choice/day-choice-28.js" defer></script>
+    <script src="choice/death-choice.js" defer></script>
     <script src="generation.js" defer></script>
 </head>
 
 <body class="page4">
-    <div class="vertical-guide"></div>
+    <!-- <div class="vertical-guide"></div> -->
    
     <div class="date-name">
         <div class="section-title">DAY</div>
