--- a/public/5-day-31.html
+++ b/public/5-day-31.html
@@ -15,11 +15,13 @@
     <script src="arduino.js" defer></script>
     <script src="choice/day-choice-31.js" defer></script>
 
+    <script src="choice/death-choice.js" defer></script>
+
     <script src="generation.js" defer></script>
 </head>
 
 <body class="page4">
-    <div class="vertical-guide"></div>
+    <!-- <div class="vertical-guide"></div> -->
 
     <div class="date-name">
         <div class="section-title">DAY</div>
@@ -84,6 +86,20 @@
             <div class="day" id="day31">19</div>
         </div>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const days = document.querySelectorAll(".day"); // Seleziona tutti gli elementi con la classe "day"
+            
+            days.forEach((day) => {
+                day.addEventListener("click", () => {
+                    const selectedDay = day.textContent; // Ottieni il giorno selezionato
+                    localStorage.setItem("selectedDay", selectedDay); // Salva il giorno in localStorage
+                    window.location.href = "6-year.html"; // Naviga verso 6-year.html
+                });
+            });
+        });
+    </script>
 
     
 </body>
