--- a/public/6-year.html
+++ b/public/6-year.html
@@ -15,11 +15,12 @@
     <!-- <script src="script.js" defer></script> -->
     <script src="arduino.js" defer></script>
     <script src="choice/year-choice.js" defer></script>
+    <script src="choice/death-choice.js" defer></script>
     <script src="generation.js" defer></script>
 </head>
 
 <body class="page4">
-    <div class="vertical-guide"></div>
+    <!-- <div class="vertical-guide"></div> -->
 
     <div class="date-name">
         <div class="section-title">YEAR</div>
