--- a/public/7-recap.html
+++ b/public/7-recap.html
@@ -15,8 +15,10 @@
     <!-- <script src="script.js" defer></script> -->
     <script src="arduino.js" defer></script>
     <script src="choice/recap.js" defer></script>
-    <script src="choice/death-choice.js" defer></script>
+
     <script src="generation.js" defer></script>
+
+    <script src="choice/scontrino.js" defer></script>
 </head>
 
 <body class="page4">
