--- a/public/9-thankyou.html
+++ b/public/9-thankyou.html
@@ -15,7 +15,7 @@
     <!-- <script src="script.js" defer></script> -->
     <script src="arduino.js" defer></script>
     <script src="generation.js" defer></script>
-
+    <script src="end.js" defer></script>
 </head>
 
 <body class="page4">
@@ -25,9 +25,11 @@
             THANK FOR YOUR CHOICE.
             <br>
             <br>
-            CLOSE THE TIME CAPSULE TO DEFINE YOUR IMAGINE BEYOND TIME
+            CLOSE THE TIME CAPSULE TO DEFINE YOUR IMAGE BEYOND TIME
         </span>
     </div>
+
+    <img class="logo-big" style="display: none;" src="asset/Marchio.svg" alt="Marchio">
 
     
 </body>
