fatto età che stai sull'isola

--- a/public/1-index.html
+++ b/public/1-index.html
@@ -11,13 +11,15 @@
     <script src="arduino.js" defer></script>
     <script src="start.js" defer></script>
 </head>
-<body class="page1">
+<body class="page1 fade-in">
     <div class="begin-instructions">
         <h4 class="font-regular">
             OPEN THE TIME CAPSULE <br>
             TO START THE EXPERIENCE
         </h4>
     </div>
-    <img class="logo" src="asset/Marchio.svg" alt="Marchio">
+    <img class="logo" src="asset/LT.svg" alt="Marchio">
+
+    
 </body>
 </html>
