--- a/public/4-month.html
+++ b/public/4-month.html
@@ -41,6 +41,14 @@
         </div>
     </div>
 
+<div class="date-instructions">
+    <div class="confirm-instructions">
+        <div class="press">PRESS</div>
+        <div class="dot"></div>
+        <div class="to-confirm">to CONFIRM</div>
+    </div>
+</div>
+
     <div class="month-choice">
         <!-- Cerchio -->
         <div class="month-circle"></div>
