--- a/public/5-day-28.html
+++ b/public/5-day-28.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 4</title>
+    <title>Day</title>
     <link rel="icon" type="image/svg+xml" href="asset/LT.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/qbb0zyi.css">
@@ -42,6 +42,19 @@
             <span class="day-name" id="day-name"></span>
 
             
+        </div>
+    </div>
+
+    <div class="date-instructions">
+        <div class="confirm-instructions">
+            <div class="press">PRESS</div>
+            <div class="dot"></div>
+            <div class="to-confirm">to CONFIRM</div>
+        </div>
+        <div class="back-instructions">
+            <div class="double-press">DOUBLE PRESS</div>
+            <div class="dot"></div>
+            <div class="to-get-back">to GET BACK to MONTH</div>
         </div>
     </div>
 
