--- a/public/8-scontrino.html
+++ b/public/8-scontrino.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 4</title>
+    <title>Scontrino</title>
     <link rel="icon" type="image/svg+xml" href="asset/LT.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/qbb0zyi.css">
@@ -23,26 +23,60 @@
     <!-- <div class="vertical-guide"></div> -->
 
     <div class="date-name" id="final-date-scontrino">
-        <div class="section-title">DEATH</div>
+        <div class="section-title">DEATH RECAP</div>
         <div class="date-container">
             <div class="death-title-container">
-                <span class="death-title">MODE</span>
                 <span class="death-name" id="death-name"></span>
             </div>
+            <div class="stage-title-container">
+                <span class="stage-title">DEATH'S STAGING</span>
+                <span class="stage-name" id="stage-name">numero</span>
+            </div>
 
-            <div class="date-title-container">
+            <div class="age-impact-title-container">
+                <span class="age-impact-title">AGE IMPACT</span>
+                <span class="age-impact-name" id="age-impact-name">numero</span>
+            </div>
+
+            <div class="media-impact-title-container">
+                <span class="media-impact-title">MEDIA IMPACT</span>
+                <span class="media-impact-name" id="media-impact-name">numero</span>
+            </div>
+
+            <div class="etherea-title-container">
+                <span class="etherea-name" id="etherea-name">ETHEREA ISLAND</span>
+            </div>
+
+            <div class="transport-title-container">
+                <span class="transport-title">TRANSPORT</span>
+                <span class="transport-name" id="transport-name">numero</span>
+            </div>
+
+            <div class="stay-title-container">
+                <span class="stay-title">N YEAR-STAY</span>
+                <span class="stay-name" id="stay-name">numero</span>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="final-price-title-container">
+                <span class="final-price-name" id="final-price-name">TOTAL PRICE</span>
+            </div>
+            
+
+            <!-- <div class="date-title-container">
                 <span class="date-title">DATE</span>
                 <span class="date-complete">
                     <span class="date-name-month" id="date-name-month"></span>
                     <span class="date-name-day" id="date-name-day"></span>
                     <span class="date-name-year" id="date-name-year"></span>
                 </span>
-            </div>
+            </div> -->
 
-            <div class="price-title-container">
+            <!-- <div class="price-title-container">
                 <span class="price-title">PRICE</span>
                 <span class="price-name" id="price-name"></span>
-            </div>
+            </div> -->
         </div>
     </div>
 
