--- a/public/2-onboarding.html
+++ b/public/2-onboarding.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/svg+xml" href="asset/LT.png">
     <link rel="stylesheet" href="style.css">
     <script src="arduino.js" defer></script>
+    <script src="moving.js" defer></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
