--- a/public/6-year-january.html
+++ b/public/6-year-january.html
@@ -14,19 +14,17 @@
 
     <!-- <script src="script.js" defer></script> -->
     <script src="arduino.js" defer></script>
-    <script src="choice/year-choice.js" defer></script>
+    <script src="choice/year-choice-2025.js" defer></script>
 
     <script src="generation.js" defer></script>
     <script src="moving.js" defer></script>
 </head>
-
 <div class="horizontal-guide"></div>
 <div class="horizontal-guide-2"></div>
 <div class="horizontal-guide-3"></div>
 <div class="horizontal-guide-4"></div>
 <div class="horizontal-guide-5"></div>
 <div class="horizontal-guide-6"></div>
-
 <body class="page4">
     <!-- <div class="vertical-guide"></div> -->
 
