--- a/public/7-recap.html
+++ b/public/7-recap.html
@@ -17,10 +17,16 @@
     <script src="choice/recap.js" defer></script>
 
     <script src="generation.js" defer></script>
+    <script src="moving.js" defer></script>
 
     <script src="choice/scontrino.js" defer></script>
 </head>
-
+<div class="horizontal-guide"></div>
+<div class="horizontal-guide-2"></div>
+<div class="horizontal-guide-3"></div>
+<div class="horizontal-guide-4"></div>
+<div class="horizontal-guide-5"></div>
+<div class="horizontal-guide-6"></div>
 <body class="page4">
     <!-- <div class="vertical-guide"></div> -->
 
@@ -78,7 +84,7 @@
         <div class="back-instructions">
             <div class="double-press">DOUBLE PRESS</div>
             <div class="dot"></div>
-            <div class="to-get-back">to GET BACK to MONTH</div>
+            <div class="to-get-back">to GET BACK to YEAR</div>
         </div>
     </div>
     
