--- a/public/9-thankyou.html
+++ b/public/9-thankyou.html
@@ -15,7 +15,7 @@
     <!-- <script src="script.js" defer></script> -->
     <script src="arduino.js" defer></script>
     <script src="generation.js" defer></script>
-    <script src="end.js" defer></script>
+    <script src="choice/scontrino.js" defer></script>
 </head>
 
 <body class="page4">
@@ -24,12 +24,9 @@
         <span class="thankyou-container">
             THANK FOR YOUR CHOICE.
             <br>
-            <br>
             CLOSE THE TIME CAPSULE TO DEFINE YOUR IMAGE BEYOND TIME
         </span>
     </div>
-
-    <img class="logo-big" style="display: none;" src="asset/Marchio.svg" alt="Marchio">
 
     
 </body>
