--- a/public/2a-insert.html
+++ b/public/2a-insert.html
@@ -13,6 +13,8 @@
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
     <script src="choice/insert-age.js" defer></script>
+    <script src="generation.js" defer></script>
+    <script src="moving.js" defer></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
