--- a/public/2b-age.html
+++ b/public/2b-age.html
@@ -13,12 +13,21 @@
     <script src="script.js" defer></script>
     <script src="arduino.js" defer></script>
     <script src="choice/age-choice.js" defer></script>
+    
+    <script src="generation.js" defer></script>
+    <script src="moving.js" defer></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.serialport/1.0.0/p5.serialport.js"></script>
 </head>
+<div class="horizontal-guide"></div>
+<div class="horizontal-guide-2"></div>
+<div class="horizontal-guide-3"></div>
+<div class="horizontal-guide-4"></div>
+<div class="horizontal-guide-5"></div>
+<div class="horizontal-guide-6"></div>
 <body class="page1 fade-in">
     <!-- <div class="vertical-guide"></div> -->
 
@@ -32,89 +41,89 @@
         <div class="age-circle"></div>
         <!-- Month -->
         <div class="age-container">
-            <div class="age" id="age1">68</div>
-            <div class="age" id="age2">69</div>
-            <div class="age" id="age3">70</div>
-<div class="age" id="age4">71</div>
-<div class="age" id="age5">72</div>
-<div class="age" id="age6">73</div>
-<div class="age" id="age7">74</div>
-<div class="age" id="age8">75</div>
-<div class="age" id="age9">76</div>
-<div class="age" id="age10">77</div>
-<div class="age" id="age11">78</div>
-<div class="age" id="age12">79</div>
-<div class="age" id="age13">80</div>
-<div class="age" id="age14">81</div>
-<div class="age" id="age15">82</div>
-<div class="age" id="age16">83</div>
-<div class="age" id="age17">84</div>
-<div class="age" id="age18">85</div>
-<div class="age" id="age19">86</div>
-<div class="age" id="age20">87</div>
-<div class="age" id="age21">88</div>
-<div class="age" id="age22">89</div>
-<div class="age" id="age23">90</div>
-<div class="age" id="age24">91</div>
-<div class="age" id="age25">92</div>
-<div class="age" id="age26">93</div>
-<div class="age" id="age27">94</div>
-<div class="age" id="age28">95</div>
-<div class="age" id="age29">96</div>
-<div class="age" id="age30">97</div>
-<div class="age" id="age31">98</div>
-<div class="age" id="age32">99</div>
+            <div class="age" id="age1">59</div>
+            <div class="age" id="age2">60</div>
+            <div class="age" id="age3">61</div>
+            <div class="age" id="age4">62</div>
+            <div class="age" id="age5">63</div>
+            <div class="age" id="age6">64</div>
+            <div class="age" id="age7">65</div>
+            <div class="age" id="age8">66</div>
+            <div class="age" id="age9">67</div>
+            <div class="age" id="age10">68</div>
+            <div class="age" id="age11">69</div>
+            <div class="age" id="age12">70</div>
+            <div class="age" id="age13">71</div>
+            <div class="age" id="age14">72</div>
+            <div class="age" id="age15">73</div>
+            <div class="age" id="age16">74</div>
+            <div class="age" id="age17">75</div>
+            <div class="age" id="age18">76</div>
+            <div class="age" id="age19">77</div>
+            <div class="age" id="age20">78</div>
+            <div class="age" id="age21">79</div>
+            <div class="age" id="age22">80</div>
+            <div class="age" id="age23">81</div>
+            <div class="age" id="age24">82</div>
+            <div class="age" id="age25">83</div>
+            <div class="age" id="age26">84</div>
+            <div class="age" id="age27">85</div>
+            <div class="age" id="age28">86</div>
+            <div class="age" id="age29">87</div>
+            <div class="age" id="age30">88</div>
+            <div class="age" id="age31">89</div>
+            <div class="age" id="age32">90</div>
 <div class="age" id="age33">18</div>
 <div class="age" id="age34">19</div>
 <div class="age" id="age35">20</div>
-            <div class="age" id="age36">21</div>
-            <div class="age" id="age37">22</div>
-            <div class="age" id="age38">23</div>
-            <div class="age" id="age39">24</div>
-            <div class="age" id="age40">25</div>
-            <div class="age" id="age41">26</div>
-            <div class="age" id="age42">27</div>
-            <div class="age" id="age43">28</div>
-            <div class="age" id="age44">29</div>
-            <div class="age" id="age45">30</div>
-            <div class="age" id="age46">31</div>
-            <div class="age" id="age47">32</div>
-            <div class="age" id="age48">33</div>
-            <div class="age" id="age49">34</div>
-            <div class="age" id="age50">35</div>
-            <div class="age" id="age51">36</div>
-            <div class="age" id="age52">37</div>
-            <div class="age" id="age53">38</div>
-            <div class="age" id="age54">39</div>
-            <div class="age" id="age55">40</div>
-            <div class="age" id="age56">41</div>
-            <div class="age" id="age57">42</div>
-            <div class="age" id="age58">43</div>
-            <div class="age" id="age59">44</div>
-            <div class="age" id="age60">45</div>
-            <div class="age" id="age61">46</div>
-            <div class="age" id="age62">47</div>
-            <div class="age" id="age63">48</div>
-            <div class="age" id="age64">49</div>
-            <div class="age" id="age65">50</div>
-            <div class="age" id="age66">51</div>
-            <div class="age" id="age67">52</div>
-            <div class="age" id="age68">53</div>
-            <div class="age" id="age69">54</div>
-            <div class="age" id="age70">55</div>
-            <div class="age" id="age71">56</div>
-            <div class="age" id="age72">57</div>
-            <div class="age" id="age73">58</div>
-            <div class="age" id="age74">59</div>
-            <div class="age" id="age75">60</div>
-            <div class="age" id="age76">61</div>
-            <div class="age" id="age77">62</div>
-            <div class="age" id="age78">63</div>
-            <div class="age" id="age79">64</div>
-            <div class="age" id="age80">65</div>
-            <div class="age" id="age81">66</div>
-            <div class="age" id="age82">67</div>
+<div class="age" id="age36">21</div>
+<div class="age" id="age37">22</div>
+<div class="age" id="age38">23</div>
+<div class="age" id="age39">24</div>
+<div class="age" id="age40">25</div>
+<div class="age" id="age41">26</div>
+<div class="age" id="age42">27</div>
+<div class="age" id="age43">28</div>
+<div class="age" id="age44">29</div>
+<div class="age" id="age45">30</div>
+<div class="age" id="age46">31</div>
+<div class="age" id="age47">32</div>
+<div class="age" id="age48">33</div>
+<div class="age" id="age49">34</div>
+<div class="age" id="age50">35</div>
+<div class="age" id="age51">36</div>
+<div class="age" id="age52">37</div>
+<div class="age" id="age53">38</div>
+<div class="age" id="age54">39</div>
+<div class="age" id="age55">40</div>
+<div class="age" id="age56">41</div>
+<div class="age" id="age57">42</div>
+<div class="age" id="age58">43</div>
+<div class="age" id="age59">44</div>
+<div class="age" id="age60">45</div>
+<div class="age" id="age61">46</div>
+<div class="age" id="age62">47</div>
+<div class="age" id="age63">48</div>
+<div class="age" id="age64">49</div>
+<div class="age" id="age65">50</div>
+<div class="age" id="age66">51</div>
+<div class="age" id="age67">52</div>
+<div class="age" id="age68">53</div>
+<div class="age" id="age69">54</div>
+<div class="age" id="age70">55</div>
+<div class="age" id="age71">56</div>
+<div class="age" id="age72">57</div>
+<div class="age" id="age73">58</div>
         </div>
     </div>
+
+    <div class="date-instructions">
+        <div class="confirm-instructions">
+            <div class="press">PRESS</div>
+            <div class="dot"></div>
+            <div class="to-confirm">to CONFIRM</div>
+        </div>
+    </div>
+
 </body>
 </html>
