--- a/public/4-month.html
+++ b/public/4-month.html
@@ -19,7 +19,14 @@
     <script src="choice/month-choice.js" defer></script>
 
     <script src="generation.js" defer></script>
+    <script src="moving.js" defer></script>
 </head>
+<div class="horizontal-guide"></div>
+<div class="horizontal-guide-2"></div>
+<div class="horizontal-guide-3"></div>
+<div class="horizontal-guide-4"></div>
+<div class="horizontal-guide-5"></div>
+<div class="horizontal-guide-6"></div>
 <body class="page4">
     <!-- <div class="vertical-guide"></div> -->
 
