--- a/public/5-day-28.html
+++ b/public/5-day-28.html
@@ -16,8 +16,15 @@
     <script src="choice/day-choice-28.js" defer></script>
 
     <script src="generation.js" defer></script>
+    <script src="moving.js" defer></script>
 </head>
 
+<div class="horizontal-guide"></div>
+<div class="horizontal-guide-2"></div>
+<div class="horizontal-guide-3"></div>
+<div class="horizontal-guide-4"></div>
+<div class="horizontal-guide-5"></div>
+<div class="horizontal-guide-6"></div>
 <body class="page4">
     <!-- <div class="vertical-guide"></div> -->
    
@@ -94,5 +101,26 @@
             <div class="day" id="day28">16</div>
         </div>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const days = document.querySelectorAll(".day");
+            
+            days.forEach((day) => {
+                day.addEventListener("click", () => {
+                    const selectedDay = day.textContent;
+                    const selectedMonth = localStorage.getItem("selectedMonth");
+                    localStorage.setItem("selectedDay", selectedDay);
+                    
+                    // Reindirizza in base al mese selezionato
+                    if (selectedMonth === "JANUARY") {
+                        window.location.href = "6-year-january.html";
+                    } else {
+                        window.location.href = "6-year.html";
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html> 
