--- a/public/5-day-31.html
+++ b/public/5-day-31.html
@@ -15,11 +15,15 @@
     <script src="arduino.js" defer></script>
     <script src="choice/day-choice-31.js" defer></script>
 
-
-
     <script src="generation.js" defer></script>
+    <script src="moving.js" defer></script>
 </head>
-
+<div class="horizontal-guide"></div>
+<div class="horizontal-guide-2"></div>
+<div class="horizontal-guide-3"></div>
+<div class="horizontal-guide-4"></div>
+<div class="horizontal-guide-5"></div>
+<div class="horizontal-guide-6"></div>
 <body class="page4">
     <!-- <div class="vertical-guide"></div> -->
 
@@ -102,13 +106,20 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const days = document.querySelectorAll(".day"); // Seleziona tutti gli elementi con la classe "day"
+            const days = document.querySelectorAll(".day");
             
             days.forEach((day) => {
                 day.addEventListener("click", () => {
-                    const selectedDay = day.textContent; // Ottieni il giorno selezionato
-                    localStorage.setItem("selectedDay", selectedDay); // Salva il giorno in localStorage
-                    window.location.href = "6-year.html"; // Naviga verso 6-year.html
+                    const selectedDay = day.textContent;
+                    const selectedMonth = localStorage.getItem("selectedMonth");
+                    localStorage.setItem("selectedDay", selectedDay);
+                    
+                    // Reindirizza in base al mese selezionato
+                    if (selectedMonth === "JANUARY") {
+                        window.location.href = "6-year-january.html";
+                    } else {
+                        window.location.href = "6-year.html";
+                    }
                 });
             });
         });
