fine. - usabile solo da pc

--- a/public/9-thankyou.html
+++ b/public/9-thankyou.html
@@ -23,7 +23,7 @@
 
     <div>
         <span class="thankyou-container">
-            THANK FOR YOUR CHOICE.
+            THANK YOU FOR YOUR CHOICE.
             <br>
             CLOSE THE TIME CAPSULE TO DEFINE YOUR IMAGE BEYOND TIME
         </span>
